[package]
name = "RustMultithreading"
version = "0.1.0"
authors = ["Joris Quist <Jorisquist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
json = "0.12.4"
rand = "0.7.3"